@@ -3,9 +3,10 @@ SubVersion: $Id$
 Log of changes:	tilp (cables, calcs, files, ticonv)
 
 - 31/12/2009, version 1.13 (1.2.1, 1.1.3, 1.1.1, 1.0.6): roms
-        - merged Lionel's patch: add some new & shorter command line flags 
+    - merged Lionel's patch: add some new & shorter command line flags 
 	for use by GCC4TI
-	- 
+	- changed location of "My TI Files" folder (Vista)
+	- replaced obselete function used in the drive list menu  (Vista)
 	
 - 13/08/2008, version 1.12: (1.2.0, 1.1.3, 1.1.1, 1.0.6): roms
 	- added NSpire OS1.4 support
